# AgentProject

enterprise-deep-research-main/: .env.sample  .gitignore  AI_ETHICS.md  CONTRIBUTING.md  QA模式和Benchmark模式说明.md  README.md  Salesforce_Enterprise_Deep_Research_Agent_架构文档.md  Steering_Message处理流程说明.md  app.py  coding-agent.py  e2b.Dockerfile  e2b.toml  e2b_documentation.md  graph_test.py  langgraph.json  llm_clients.py  math_client.py  math_client_langgraph.py  math_client_new.py  math_server.py  mcp_agent.secrets.yaml  model_test.py  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  session_store.py  stream_test_2.html  test_agents.py  test_azure_model.py  test_benchmark.py  test_graph.py  test_specialized_searches.py  test_unified_query.py  test_visualization.py  实现流程图.md  核心代码示例.md  界面模式映射说明.md
enterprise-deep-research-main/ai-research-assistant/: package-lock.json  package.json  tailwind.config.js
enterprise-deep-research-main/benchmarks/: README.md  process_deepconsult.py  process_drb.py  run_research.py  run_research.sh  run_research_concurrent.py
enterprise-deep-research-main/models/: file_analysis.py  research.py
enterprise-deep-research-main/routers/: database.py  file_analysis.py  research.py  research.py.bak  simple_steering_api.py
enterprise-deep-research-main/services/: activity_generator.py  content_analysis.py  file_parsers.py  file_storage.py  research.py
enterprise-deep-research-main/src/: __init__.py  agent_architecture.py  configuration.py  graph.py  prompts.py  prompts_benchmark.py  prompts_qa.py  state.py  (+5 more)
(+134 files in other folders)
